[package]
name = "bcm2711-lpa"
version = "0.2.1"
authors = ["Po-Yi Tsai <abt8601@protonmail.ch>"]
edition = "2021"
rust-version = "1.65.0"
description = "Peripheral access crate for BCM2711 found in the Raspberry Pi 4."
repository = "https://github.com/abt8601/raspi-pacs"
license = "Unlicense"
keywords = ["raspberrypi", "bcm2711", "pac"]
categories = ["embedded", "hardware-support", "no-std", "no-std::no-alloc"]

[dependencies]
critical-section = { version = "1.0", optional = true }
vcell = "0.1.0"
portable-atomic = { version = "0.3.16", default-features = false }

[features]
rt = []
